orderpage-style.css
body {
	background-color: #EBEBEB;
}

.root-layout {
	margin: 0px;
	max-height: 100vh;
}


/* LEFT BAR */
.flex-parent {
	display: flex;
	flex-direction: column;
	padding: 1vw;
	background-color: #DFC6A9;
	height: calc(100vh - 2vw); /* FIX THIS : TODO DISACCOUNT FOR WINDOW TAB BAR?*/
	width: 30%;
	float: left;
	border: 0px;
	border-radius: 0px 1.2vw 1.2vw 0px; 
}

.flex-parent > :not(.flex-scrollable) {
	flex-shrink: 0;
}

.flex-parent > .flex-scrollable {
	flex-grow: 1;
}

.flex-scrollable {
	overflow: auto;
}



.order-heading {
	font-size: 4.5vw;
	font-family: visbyround-regular;
	margin-bottom: 0;
	margin-top: 4vh;
	padding-bottom: 0;
}

.order-sub {
	margin: 0;
	margin-top: -1vh;
	margin-bottom: 0.8vh;
	padding: 0;
	text-align: left;
	font-size: 1.8vw;
	font-family: visbyround-medium;
	color: #777;
}

.order-list {
	font-size: 2vw;
	font-family: 'Roboto Mono';
	border: 0px;
	margin: 0px;
	padding: 0px;
}


/* LEFT BAR BOTTOM BUTTONS */
.bar-hstack {
	display: flex;
	flex-direction: row;

	gap: 0.5vw;

	width: 100%;
}

.bar-button {
	font-size: 1.75vw;
	font-family: visbyround-medium;
	border: 0px;
	padding-top: 0.65vh;
	padding-bottom: 0.65vh;
	border-radius: 0.4vw;
}

#endshift-button {
	flex-grow: 1;
	background: #FF867C;
}

#preorders-button {
	flex-grow: 4;
	background: #FFF7D9;
}

#confirm-endshift-button {
	flex-grow: 3;
	background: #FF867C;
}

#cancel-endshift-button {
	flex-grow: 1;
}













/* ORDER BUTTONS */








.rootvstack {
	margin-left: 32%;
	height: calc(97vh - 5*(1vh));
	
	padding-top: 1.4vh;
	padding-bottom: 1.4vh;
	padding-left: 1.4vh;
}


.hstack1 {
	display: flex;
	flex: 1;
	flex-direction: row;
	flex-wrap: nowrap;
	height: calc(34vh - 2*(1.4vh));
	justify-content: space-evenly;
	
	padding-right: 1.4vh;
	
	gap: 1.4vh;
	
	padding-bottom: 1.4vh;
}



.hstack2 {
	display: flex;
	flex: 1;
	flex-direction: row;
	justify-content: space-evenly;
	
	height: 66vh;
}




.vstack {
	display: flex;
	flex: 1;
	flex-wrap: nowrap;
	flex-direction: column;
	
	padding-right: 1.4vh;
	
	justify-content: space-evenly;
	
	
	height: 66vh;
	
}



.hstack-item {
	background: white;
	border-radius: 0.6vw;
	
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	
	margin-bottom: 1.4vh;
	
	height: 100%;
	width: 100%;
}




.button-title-big {
	font-size: 7vw;
	font-family: 'Roboto Mono';
	font-weight: 700;
	
	
	padding: 0px;
	margin: 0px;
	
	margin-bottom: -0.8vh;
}

.button-sub-big {
	font-size: 3.5vw;
	font-family: 'Roboto Mono';
	font-weight: 500;
	
	padding: 0px;
	margin: 0px;
	
	margin-top: -0.8vh;
}



.button-title-small {
	font-size: 5vw;
	font-family: 'Roboto Mono';
	font-weight: 700;
	
	
	padding: 0px;
	margin: 0px;
	
	margin-bottom: -0.8vh;
	
}

.button-sub-small {
	font-size: 2.5vw;
	font-family: 'Roboto Mono';
	font-weight: 500;
	
	padding: 0px;
	margin: 0px;
	
	margin-top: -0.8vh;
}


/* MODAL */

.modal-bg {
	display: none;
	justify-content: center;
	align-items: center;

	position: fixed;
	z-index: 1;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	background-color: rgba(0,0,0,0.4);
	backdrop-filter: blur(16px);
}

.modal-content {
	background-color: #EBEBEB;
	border-radius: 0.5vw;
	
	display: flex;
	flex-direction: column;
	
	padding: 1.3vw;
	padding-top: 4vh;

	width: 75vw;
	height: 70vh;
}

#password {
	font-size: 1.5vw;
}

input[type=password]:focus {
    outline: none;
	border: 3px solid #DFC6A9;
}

input[type=password] {
	border: 3px solid gray;
	transition: border 0.2s;
	border-radius: 0.5vw;
	height: 10vh;
}


.counter-minus {
	width: 2.8vw;
	height: 2.8vw;

	z-index: 200;
}

.counter-button-minus {
	display: none;

	width: 100%;
	height: 3vw;

	background: #ffceca;
	border-radius: 0.6vw;
	border: 0px;
	margin-top: 1vh;

	z-index: 200;

}

#done-pw {
	height: 8vh;
}

#pass-modal-content {
	background-color: #EBEBEB;
	border-radius: 0.5vw;
	
	display: flex;
	flex-direction: column;
	gap: 1.4vh;
	
	padding: 1vw;

	width: 20vw;
	height: 18vh;
}

#pass-title {
	font-size: 2.75vw;
	font-family: visbyround-medium;
}

#pass-done {
	font-size: 1.8vw;
	font-family: "Roboto Mono";
	font-weight: 600;
}


.dialog-title {
	margin: 0;
	font-family: visbyround-medium;
	font-size: 4.4vw;
	vertical-align: bottom;
}


.dialog-drink-title {
	font-family: "Roboto Mono";
	font-weight: 600;
	font-size: 3vw;
	vertical-align: bottom;
	text-align: right;
}





/* LAYOUT */
.modal-vstack {
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;

	height: 100%;


	padding: 0px;
	margin: 0px;
}


.modal-hstack {
	padding: 0px;
	margin: 0px;


	height: 100%;

	


	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	
	gap: 2vh;
}

#modal-hstack-big {
	flex: 1;
	flex-grow: 3;
}


#modal-hstack-small1 {
	flex: 1;
	flex-grow: 2;

	gap: 20%;


}

#modal-hstack-small2 {
	flex: 1;
	flex-grow: 2;

	gap: 18%;

}



#modal-hstack-small2-left {
	flex: 1;
	flex-grow: 1;
}


#modal-hstack-small2-right {
	flex: 1;
	flex-grow: 1;
}





#modal-hstack-small1-left {
	flex: 1;
	flex-grow: 5;
}


#modal-hstack-small1-right {
	flex: 1;
	flex-grow: 1;
}




.subtitle-hstack {
	display: flex;
	flex-direction: row;

	justify-content: space-between;

	width: 100%;
}


.divider {
	width: 0.5vw;
	height: 80%;

	border-radius: 0.25vw;

	background-color: white;
}




.modal-hstack-item {
	padding: 0px;
	margin: 0px;

	width: 100%;

	display: flex;
	flex-direction: column;

	justify-content: center;
	align-items: center;

	gap: -0.5vh;
}



.modal-hstack-item {
	padding: 0px;
	margin: 0px;

	width: 100%;

	display: flex;
	flex-direction: column;

	justify-content: center;
	align-items: center;

	gap: -0.5vh;
}






#mhst-1-big {
	flex: 1;
	flex-grow: 5;
}

#mhst-1-small {
	flex: 1;
	flex-grow: 3;
}

#mhst-1-divider {
	flex: 1;
	flex-grow: 0.1;
}


#mhst-2-vstack {
	display: flex;
	flex-direction: column;

	margin: 0px;
	padding: 0px;
	gap: 2vh;

	width: 100%;
	height: 100%;

}


#mhst-2-big {
	margin: 0px;
	padding: 0px;

	width: 100%;
	height: 100%;
}



#half-size {
	flex: 1;
	flex-grow: 1;

	margin: 0px;
	padding: 0px;

	width: 100%;
	height: 100%;
}



#mhst-3-big {
	width: 100%;
	height: 100%;
}










.dialog-button {
	background-color: white;
	font-family: "Roboto Mono";
	border-radius: 1vh;
	border: none;
	transition: transform 0.1s;

	width: 100%;
	height: 100%;
}

/* .dialog-button:hover {
	background: rgba(255, 236, 179, 0.2);
} */

.dialog-button:active {
	transform: scale(0.97);
}

.dialog-button-selected {
	background-color: #ffecb3;
}

.dialog-subtitle {
	font-size: 3vh;
	font-family: visbyround-regular;

	margin-bottom: 0px;
	padding-bottom: 0px;
}

#done {
	background: #A5D6A7;
}



.button-short-name {
	font-weight: 700;
	font-size: 8vh;

	margin: 0px;
	padding: 0px;
}



.button-long-name {
	font-size: 3vh;
	font-weight: 600;

	

	margin: 0px;
	padding: 0px;

	margin-top: -1.5vh;
}





.button-short-name-s {
	font-weight: 700;
	font-size: 7.4vh;

	margin: 0px;
	padding: 0px;
}



.button-long-name-s {
	font-size: 2.6vh;
	font-weight: 600;

	

	margin: 0px;
	padding: 0px;

	margin-top: -1.5vh;
}




.button-long-name-only {
	font-size: 3vh;
	font-weight: 600;

	

	margin: 0px;
	padding: 0px;
}

